--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <section class="list">
         <header class="header">Shopping List</header>
-        <ul class="items"></ul>
+        <ul class="items">
+        </ul>
         <footer class="footer">
             <input type="text" class="footer_input" />
             <button class="footer_button">
